# forg

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ProjectHome.md  README.md
cmake/: CheckFormat.cmake  (+2 more)
src/emfc/: CMakeLists.txt
src/emfc/inc/: EApplication.h  EAsyncSocket.h  EButton.h  EDialog.h  EEdit.h  EImageList.h  EPropertyPage.h  EPropertySheet.h  EToolBarCtrl.h  EWnd.h  base.h
src/emfc/include/: EApplication.h  EAsyncSocket.h  EButton.h  EDialog.h  EEdit.h  EImageList.h  EPropertyPage.h  EPropertySheet.h  EStatusBarCtrl.h  ETabCtrl.h  EToolBarCtrl.h  EToolWindow.h  EWnd.h  base.h  emfc.h
src/emfc/src/: EApplication.cpp  EAsyncSocket.cpp  EButton.cpp  EDialog.cpp  EEdit.cpp  EImageList.cpp  EPropertyPage.cpp  EPropertySheet.cpp  EStatusBarCtrl.cpp  ETabCtrl.cpp  EToolBarCtrl.cpp  EToolWindow.cpp  EWnd.cpp  StdAfx.cpp  StdAfx.h  emfc.cpp  emfcs.rc  resource.h
src/forg/: CMakeLists.txt  PerformanceCounter.cpp  PerformanceCounter.h  Sources.cmake  api.h  base.h  config.h  forg.cpp  forg.h  forg_pch.cpp  forg_pch.h  noise.cpp  noise.h  platform.h  rendering.h
src/forg/audio/: Audio.h  AudioDSP.cpp  AudioDSP.h  AudioDefs.h  AudioMixer.cpp  AudioMixer.h  AudioOutputWaveOut.h  WaveFile.cpp  WaveFile.h
src/forg/core/: BitArray.cpp  BitArray.h  RefCounter.cpp  StringTokenizer.hpp  auto_ptr.hpp  core.h  string.hpp  vector.hpp
src/forg/cpu/: atomic.h  cpuid.cpp  cpuid.h  vector.h  vector_sse.h
src/forg/debug/: dbg.h  debug.cpp  pop_new.h
src/forg/fs/: File.cpp
src/forg/image/: Image.cpp
src/forg/image/dds/: dds.h
src/forg/include/forg/: Engine.h  Input.h  api.h  base.h  enums.h  forg.h  nn.h  rendering.h  scene.h
src/forg/include/forg/audio/: AudioDSP.h  AudioDefs.h  AudioMixer.h  WaveFile.h
src/forg/io/: ISerializer.cpp
src/forg/math/: Math.h  Matrix4.cpp  Matrix4.h  Plane.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/forg/mesh/: XLoader.h
src/forg/mesh/ply/: plyfile.h
src/forg/mesh/xfile/: xbinreader.cpp  xbzipreader.cpp  xbzipreader.h  xdata.cpp  xdatamgr.h  xdefs.cpp  xdefs.h  xfile.cpp  xlexer.cpp  xlexer.h  xreader.cpp  xreader.h  xstdtemplates.cpp  xstdtemplates.h  xtemplate.h  xtemplatesmgr.h  xtmembers.h
src/forg/opencl/: OpenCL.cpp  OpenCL.h
src/forg/os/: File.cpp  File.h  ILibrary.h  WindowsLibrary.cpp
src/forg/rendering/: Camera.cpp  Camera.h  Color.cpp  ExtendedMaterial.h  Font.cpp  Font.h  IIndexBuffer.h  IRenderDevice.cpp  IRenderDevice.h  ISurface.cpp  ITexture.cpp  IVertexBuffer.h  Material.h  Ray.h  Sprite.cpp  Vertex.h  VertexDeclaration.h
src/forg/rendering/reference/: SWBuffers.cpp  SWBuffers.h  SWRenderDevice.cpp  SWRenderDevice.h
src/forg/script/: lexer.cpp  lexer.h  script.h
src/forg/script/xml/: XMLParser.cpp  XMLParser.h  XMLSerializer.cpp
src/forg/src/: Engine.cpp  forg_pch.h
src/forg/src/audio/: AudioDSP.cpp  AudioMixer.cpp  AudioOutputWaveOut.cpp  AudioOutputWaveOut.h  WaveFile.cpp
src/forg/src/control/: SceneControl.cpp
src/forg/src/core/: BitArray.cpp  RefCounter.cpp
src/forg/src/cpu/: cpuid.cpp
src/forg/src/debug/: dbg_new.h  debug.cpp  push_new.h
src/forg/src/image/: Image.cpp
src/forg/src/io/: MemorySerializer.cpp
src/forg/src/math/: Math.cpp  Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/forg/src/mesh/: GLTFLoader.cpp  XLoader.cpp
src/forg/src/net/: Command.cpp  CommandQueue.cpp  HttpControlServer.cpp  HttpControlSocketServer.h  HttpControlSocketServer_posix.cpp  HttpControlSocketServer_win32.cpp  HttpRequest.cpp
src/forg/src/nn/: Matrix.cpp  Mnist.cpp  Module.cpp  Value.cpp
src/forg/src/opencl/: OpenCL.cpp
src/forg/src/os/: WindowsLibrary.cpp
src/forg/src/rendering/: Camera.cpp  CameraOrbitController.cpp  Color.cpp  Font.cpp  IRenderDevice.cpp  IRenderer.cpp  ISurface.cpp  ITexture.cpp  Mesh.cpp  Ray.cpp  Sprite.cpp  Vertex.cpp  VertexDeclaration.cpp  VertexElement.cpp
src/forg/src/scene/: CameraNode.cpp  MeshNode.cpp  Model.cpp  Scene.cpp  SceneNode.cpp  TreeNode.cpp
src/forg/src/script/: ParserBase.cpp  lexer.cpp
src/forg/src/ui/: gui.cpp
src/forg/ui/: gui.cpp  gui.h
src/glrenderer/: CMakeLists.txt  GLDeviceCaps.cpp  GLDeviceCaps.h  GLFunc.cpp  GLFunc.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderDevice.cpp  GLRenderDevice.h  GLRenderer.cpp  GLRenderer.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h
src/macapp/: CMakeLists.txt  ControlCommands.cpp  ControlCommands.h  config.xml  config.yml  main.mm  scene.yml
src/metalrenderer/: CMakeLists.txt  MetalBuffers.h  MetalBuffers.mm  MetalRenderDevice.h  MetalRenderDevice.mm  MetalRenderer.cpp
src/swrenderer/: CMakeLists.txt  SWBuffers.h  SWRenderDevice.cpp  SWRenderDevice.h  SWRenderDevice_osx.mm  SWRenderer.cpp  SWRenderer.h  main.cpp
src/winapp/: CMakeLists.txt  Resource.h  Viewport.cpp  Viewport.h  config.yml  scene.yml  stdafx.h  winapp.cpp  winapp.rc
tests/: CMakeLists.txt  EngineTests.cpp
tests/audio/: WaveFileTests.cpp
tests/control/: SceneControlTests.cpp
tests/core/: BitArrayTests.cpp  RefCounterTests.cpp  StringTests.cpp
tests/data/: invalid.yaml  nested.xml  nested.yaml  simple.xml  simple.yaml
tests/data/gltf/: generate.py  grid32.glb  no_normals.gltf  quad_textured.glb  translated_triangle.gltf  triangle.gltf  triangle_external.gltf  two_materials.gltf
tests/data/mnist/: README.md  invalid-magic-images.idx3-ubyte  mismatch-images.idx3-ubyte  valid-images.idx3-ubyte  valid-labels.idx1-ubyte
tests/image/: ImageLoadTests.cpp
tests/math/: MathTests.cpp
tests/mesh/: GltfLoaderTests.cpp
tests/net/: CommandQueueTests.cpp  CommandTests.cpp  HttpRequestTests.cpp
tests/nn/: NeuralNetworkTests.cpp
tests/package/: CMakeLists.txt  RunPackageTest.cmake  main.cpp
tests/rendering/: CameraTests.cpp  MeshFactoryTests.cpp  PluginTests.cpp  ReferenceRenderTests.cpp  RenderingValueTests.cpp
tests/scene/: ModelTests.cpp  SceneTreeTests.cpp
tests/script/: XMLParserTests.cpp  YAMLParserTests.cpp
tests/ui/: CUIDialogTests.cpp  GuiNodeTests.cpp
(+194 files in other folders)
